# mcp

./: README.md
.github/workflows/: publish.yml
node/: README.md  package.json
node/src/: bridge.ts  cli.ts
python/: .gitignore  README.md  pyproject.toml
python/bowmark_mcp/: __init__.py
python/tests/: test_bridge.py
