[project]
name = "bowmark-mcp"
version = "1.0.1"
description = "Bowmark MCP over stdio — a thin bridge to the hosted Bowmark MCP at https://api.bowmark.ai/mcp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bowmark AI", email = "christopher@bowmark.ai" }]
keywords = ["mcp", "model-context-protocol", "bowmark", "browser-automation", "ai-agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
# The official MCP Python SDK is the only dependency — it brings the
# streamable-HTTP client (httpx) with it. <2 guards against a future major.
dependencies = ["mcp>=1.16,<2"]

[project.urls]
Homepage = "https://bowmark.ai"
Documentation = "https://bowmark.ai/install"
Repository = "https://github.com/bowmark-ai/mcp"

[project.scripts]
bowmark-mcp = "bowmark_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bowmark_mcp"]
